--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion '23.0.3'
 
     defaultConfig {
-        applicationId "com.example.pablo.myapplication"
+        applicationId "com.youmarket.application.beneficia"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.2"
     }
     buildTypes {
         release {
